<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="horizontal"
    android:outlineAmbientShadowColor="@color/pill_diary_color"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:paddingBottom="20dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/pill"
            android:layout_marginTop="28sp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/time"
            android:backgroundTint="@color/black"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/notes"
            android:backgroundTint="@color/black"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/medName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pill_diary_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/Name_of_Medicine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/medCapsule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Amount_of_Medicine"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <TextView
        android:id="@+id/medTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/After"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <TextView
        android:id="@+id/medFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Feedback"
        android:textColor="@color/grey"
        android:textSize="15sp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="80dp">
    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/delete"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/edit"
        tools:ignore="ContentDescription" />
    </LinearLayout>



</LinearLayout>