<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineAmbientShadowColor="#009688"
    android:outlineSpotShadowColor="#009688"
    tools:context=".MedicineActivity"
    tools:ignore="MissingDefaultResource">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/white"
        app:itemIconTint="@color/custom_color_bottom_nav"
        app:itemTextColor="@color/custom_color_bottom_nav"
        app:menu="@menu/menu_bottom_nav" />

    <TextView
        android:id="@+id/textViewMyMedicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/My_Medicine"
        android:textColor="@color/pill_diary_color"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/addButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="6dp"
        android:backgroundTint="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:foregroundTint="@color/pill_diary_color"
        android:minHeight="48dp"
        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
        app:tint="@color/pill_diary_color"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMyMedicine"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="444dp"
        android:text="@string/Current"
        android:textSize="11sp" />

    <Button
        android:id="@+id/addMedicineButton"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="@color/white"
        android:outlineSpotShadowColor="#009688"
        android:text="@string/Add_new_medicine"
        android:textColor="@color/pill_diary_color"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/medListView"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="134dp" />

</RelativeLayout>